version: "2.1.0+dune"
opam-version: "2.0"
name: "cmdliner"
synopsis: "Declarative definition of command line interfaces for OCaml"
description: """\
Cmdliner allows the declarative definition of command line interfaces
for OCaml.

It provides a simple and compositional mechanism to convert command
line arguments to OCaml values and pass them to your functions. The
module automatically handles command line completion, syntax errors,
help messages and UNIX man page generation. It supports programs with
single or multiple commands and respects most of the [POSIX] and [GNU]
conventions.

Cmdliner has no dependencies and is distributed under the ISC license.

Homepage: <http://erratique.ch/software/cmdliner>

[POSIX]: http://pubs.opengroup.org/onlinepubs/009695399/basedefs/xbd_chap12.html
[GNU]: http://www.gnu.org/software/libc/manual/html_node/Argument-Syntax.html"""
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: "The cmdliner programmers"
license: "ISC"
tags: ["cli" "system" "declarative" "org:erratique"]
homepage: "https://github.com/dune-universe/cmdliner"
bug-reports: "https://github.com/dbuenzli/cmdliner/issues"
depends: [
  "dune"
  "ocaml" {>= "4.08.0"}
]
build: [ "dune" "build" "-p" name "-j" jobs ]
dev-repo: "git+https://github.com/dune-universe/cmdliner.git"
x-maintenance-intent: ["(latest)"]